# hatchify

./: README.md  hello.py  main.py  pyproject.toml
src/api/: health.py  publish.py  router.py
src/core/models/: datamodels.py
src/service/: health_service.py  publish_service.py
