[project]
name = "hatchify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.7",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pydantic-ai>=0.0.20",
    "pytest-asyncio>=0.25.2",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]
